tests/ui/panic-handler/panic-handler-bad-signature-1.stderr
error: return type should be `!`
  --> $DIR/panic-handler-bad-signature-1.rs:11:6
   |
LL | ) -> ()
   |      ^^

error: argument should be `&PanicInfo`
  --> $DIR/panic-handler-bad-signature-1.rs:10:11
   |
LL |     info: PanicInfo,
   |           ^^^^^^^^^

error: aborting due to 2 previous errors

